--- a/page.html
+++ b/page.html
@@ -10,7 +10,9 @@
 <body>
     
  <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quibusdam quis veniam necessitatibus facere cupiditate eaque accusantium, nobis quia similique voluptate architecto molestiae eveniet neque nihil nisi. Quas, iusto dicta. </p>
-
+  
+<h1> i  can push to github</h1>
+<h1>Mama i can coding now !!</h1>
 
 </body>
 </html>
